--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "dowhy>=0.11",
     "marimo>=0.18.4",
     "matplotlib>=3.10.8",
-    "numpy>=2.4.0",
+    "numpy>=1.0,<2.0",
     "pandas>=2.3.3",
     "pydot>=4.0.1",
     "scikit-learn>=1.8.0",
